iptables.rules
# Generated by iptables-save v1.4.7 on Fri Mar 26 17:40:55 2010
*nat
:PREROUTING ACCEPT [24485:1654703]
:POSTROUTING ACCEPT [2995:171082]
:OUTPUT ACCEPT [5817:439798]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 55760:55765 -j DNAT --to-destination 192.168.0.3 
-A PREROUTING -i eth0 -p udp -m udp --dport 65000 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 65000 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p udp -m udp --dport 23399 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 23399 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.0.2:80 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22772:22780 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p udp -m udp --dport 54956 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 54956 -j DNAT --to-destination 192.168.0.2 
-A PREROUTING -i eth0 -p udp -m udp --dport 22768 -j DNAT --to-destination 192.168.0.3 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22768 -j DNAT --to-destination 192.168.0.3 
-A PREROUTING -i eth0 -p udp -m udp --dport 22769 -j DNAT --to-destination 192.168.0.3 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22769 -j DNAT --to-destination 192.168.0.3 
-A POSTROUTING -o eth0 -j SNAT --to-source 89.32.125.71 
COMMIT
# Completed on Fri Mar 26 17:40:55 2010
# Generated by iptables-save v1.4.7 on Fri Mar 26 17:40:55 2010
*filter
:INPUT DROP [122955:16941754]
:FORWARD ACCEPT [630267:44803601]
:OUTPUT ACCEPT [37006608:101523692545]
-A INPUT -i eth1 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -d 89.32.125.71/32 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 54477 -m state --state NEW -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Fri Mar 26 17:40:55 2010
